fix: transition on iphone

--- a/src/components/MInput/index.module.scss
+++ b/src/components/MInput/index.module.scss
@@ -41,6 +41,7 @@
       line-height: 20px !important;
 
       transform: translateY(calc(-100% - 8px));
+      -webkit-transform: translateY(calc(-100% - 8px));
     }
   }
 
@@ -52,6 +53,6 @@
 
     pointer-events: none;
 
-    transition: 0.5s;
+    transition: transform 0.5s ease 0.15s, font-size 0.15s ease;
   }
 }
