--- a/src/components/MTextArea/index.module.scss
+++ b/src/components/MTextArea/index.module.scss
@@ -47,6 +47,7 @@
       line-height: 20px !important;
 
       transform: translateY(calc(-100% - 8px));
+      -webkit-transform: translateY(calc(-100% - 8px));
     }
   }
 
@@ -58,6 +59,6 @@
 
     pointer-events: none;
 
-    transition: 0.5s;
+    transition: transform 0.5s ease 0.15s, font-size 0.15s ease;
   }
 }
